Segunda version con imagenes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <img src="imagenes/hasbullah.webp" alt="" style="width: 50%;">
+    <img src="imagenes/foto2.jpg" alt="">
 </body>
 </html>
