--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Hola Mundo</h1>
     <img src="imagenes/hasbullah.webp" alt="" style="width: 50%;">
     <img src="imagenes/foto2.jpg" alt="">
+    <img src="imagenes/foto3.webp" alt="">
+    <img src="imagenes/foto4.jpg" alt="">
 </body>
 </html>
