--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <img src="imagenes/foto2.jpg" alt="">
     <img src="imagenes/foto3.webp" alt="">
     <img src="imagenes/foto4.jpg" alt="" style="width: 30%;">
+    <img src="imagenes/foto5.jpg" alt="" style="width: 30%;">
+    <img src="imagenes/foto6.jpg" alt="" style="width: 30%;">
 </body>
 </html>
