Segunda pagina añadida

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <img src="imagenes/foto4.jpg" alt="" style="width: 30%;">
     <img src="imagenes/foto5.jpg" alt="" style="width: 30%;">
     <img src="imagenes/foto6.jpg" alt="" style="width: 30%;">
+
+    <p>
+        <a href="segundo.html">Pulsa</a>
+    </p>
+
 </body>
 </html>
